prevgen/pirateapps/kustomize/overlays/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: radarr
      port: 7878
      targetPort: 7878
