prevgen/pirateapps/kustomize/overlays/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.lab.tailandtraillabs.com
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.lab.tailandtraillabs.com`)
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: wildcard-tls-prod
